# kairos-orchestrator

./: BACKLOG.md  DESIGN.md  INSTALL.md  README.md  TODO.md  index.html  install_and_build.sh  package.json  vite.config.ts
src/: App.tsx  TaskBoard.tsx  Timer.tsx  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hyprland.rs  main.rs  schedule.rs  tasks.rs  timer.rs
